--- a/.github/workflows/wake-up.yml
+++ b/.github/workflows/wake-up.yml
@@ -1,3 +1,31 @@
+name: Wake Streamlit App
+
+on:
+  schedule:
+    - cron: "30 12 * * *"
+  workflow_dispatch:         # allow manual trigger
+
+jobs:
+  wake-up:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run Selenium script
+        run: python wake_up_streamlit.py
+
+
 # name: Wake Up Streamlit Apps
 
 # on:
@@ -33,46 +61,46 @@
 #           name: wakeup-log
 #           path: wakeup_log.txt
 
-name: Wake Up Streamlit Apps
+# name: Wake Up Streamlit Apps
 
-on:
-  push:
-    branches:
-      - main
-  schedule:
-    - cron: "30 12 * * *"
-  workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#       - main
+#   schedule:
+#     - cron: "30 12 * * *"
+#   workflow_dispatch:
 
-jobs:
-  wake-up:
-    runs-on: ubuntu-latest
+# jobs:
+#   wake-up:
+#     runs-on: ubuntu-latest
     
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.x"
+#       - name: Set up Python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: "3.x"
 
-      - name: Install dependencies
-        run: |
-          pip install selenium
+#       - name: Install dependencies
+#         run: |
+#           pip install selenium
 
-      - name: Run Python script to wake up Streamlit apps
-        run: python wake_up_streamlit.py
+#       - name: Run Python script to wake up Streamlit apps
+#         run: python wake_up_streamlit.py
 
-      - name: Upload debug files
-        uses: actions/upload-artifact@v4
-        with:
-          name: debug-files
-          path: |
-            debug_page.html
-            debug_screenshot.png
+#       - name: Upload debug files
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: debug-files
+#           path: |
+#             debug_page.html
+#             debug_screenshot.png
 
-      - name: Upload log file as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: wakeup-log
-          path: wakeup_log.txt
+#       - name: Upload log file as artifact
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: wakeup-log
+#           path: wakeup_log.txt
