--- a/.github/workflows/wake-up.yml
+++ b/.github/workflows/wake-up.yml
@@ -24,3 +24,9 @@ jobs:
 
       - name: Run Selenium script
         run: python wake_up_streamlit.py
+
+      - name: Upload log file as artifact 
+        uses: actions/upload-artifact@v4 
+        with: 
+          name: wakeup-log 
+          path: wakeup_log.txt
